deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: restaurant-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: restaurant-app
  template:
    metadata:
      labels:
        app: restaurant-app
    spec:
      containers:
      - name: restaurant-app
        image: <your-container-registry>/<your-image-repository>:<image-tag>
        ports:
        - containerPort: 5000
