service.yaml
apiVersion: v1
kind: Service
metadata:
  name: restaurant-app
spec:
  selector:
    app: restaurant-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: LoadBalancer
